<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="settings_word">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_a">Пользовательское соглашение</string>

    <string name="share_text">Группа ИВТ-221</string>
    <string name="support_email">isparkarina@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам Playlist Maker</string>
    <string name="support_body">Работает</string>
    <string name="agreement_url">https://vivt.ru</string>


    <string name="search_word">Поиск</string>

    <string name="clear_history">Очистить историю</string>
    <string name="title_history">Вы искали</string>

    <string name="refresh">Обновить</string>
    <string name="no_result">Ничего не нашлось</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="menu_button">Кнопка Меню</string>

    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>

    <string name="player_stub_track_name">Track Name</string>
    <string name="player_stub_artist_name">Artist Name</string>
    <string name="player_stub_time">0:00</string>

    <string name="no_playlists">Вы ещё не создали ни одного плейлиста</string>
    <string name="no_tracks_in_media">Ваша медиатека пуста</string>

    <string name="dot_separator"> • </string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="playlist_name_hint">Название</string>
    <string name="playlist_description_hint">Описание</string>
</resources>
