<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/player_padding_bottom">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/player_guideline_side" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/player_guideline_side" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/header_height"
        android:layout_height="@dimen/header_height"
        android:layout_marginTop="@dimen/player_back_button_margin_top"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorBlackWhite" />

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/player_cover_margin_top"
        android:scaleType="centerInside"
        android:src="@drawable/placeholder_player"
        tools:src="@drawable/placeholder_player"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/trackName"
        style="@style/Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_track_name_margin_top"
        android:textSize="@dimen/player_track_name_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlackWhite"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/coverImage"
        tools:text="@string/player_stub_track_name" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_artist_name_margin_top"
        android:textSize="@dimen/player_artist_name_size"
        android:textColor="@color/colorBlackWhite"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        tools:text="@string/player_stub_artist_name" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="@dimen/player_play_button_size"
        android:layout_height="@dimen/player_play_button_size"
        android:layout_marginTop="@dimen/player_play_button_margin_top"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_play"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="@dimen/player_side_button_size"
        android:layout_height="@dimen/player_side_button_size"
        android:background="@drawable/round_button_grey"
        android:src="@drawable/ic_add"
        android:scaleType="center"
        app:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/playButton" />

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="@dimen/player_side_button_size"
        android:layout_height="@dimen/player_side_button_size"
        android:background="@drawable/round_button_grey"
        android:src="@drawable/ic_favourite"
        android:scaleType="center"

        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/playButton" />

    <TextView
        android:id="@+id/progress"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_progress_margin_top"
        android:text="@string/player_stub_time"
        android:textColor="@color/colorBlackWhite"
        android:textSize="@dimen/player_progress_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/durationLabel"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_info_margin_top_first"
        android:text="@string/player_duration"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/progress" />

    <TextView
        android:id="@+id/durationValue"
        style="@style/Text.PlayerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/durationLabel"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="5:35" />

    <TextView
        android:id="@+id/albumLabel"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_info_margin_top_next"
        android:text="@string/player_album"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/durationLabel" />

    <TextView
        android:id="@+id/albumValue"
        style="@style/Text.PlayerValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_info_value_spacing"
        android:gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/albumLabel"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/albumLabel"
        tools:text="Yesterday" />

    <TextView
        android:id="@+id/yearLabel"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_info_margin_top_next"
        android:text="@string/player_year"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumLabel" />

    <TextView
        android:id="@+id/yearValue"
        style="@style/Text.PlayerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/yearLabel"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="1965" />

    <TextView
        android:id="@+id/genreLabel"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_info_margin_top_next"
        android:text="@string/player_genre"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/yearLabel" />

    <TextView
        android:id="@+id/genreValue"
        style="@style/Text.PlayerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/genreLabel"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryLabel"
        style="@style/Text.PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_info_margin_top_next"
        android:text="@string/player_country"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genreLabel" />

    <TextView
        android:id="@+id/countryValue"
        style="@style/Text.PlayerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="Великобритания"/>

</androidx.constraintlayout.widget.ConstraintLayout>